Fix footer z-index

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -90,6 +90,7 @@ body {
 }
 
 .footer {
+  z-index: 10;
   height: 65px;
   max-width: 430px;
   position: fixed;
